<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
<<<<<<< HEAD
    <string name="application_name">Launcher2</string>
=======
    <string name="application_name">Launcher</string>
>>>>>>> 2d1d596... Renamed namespace to make standalone
    <!-- Name for all applications running as this uid. -->
    <string name="uid_name">Android Core Apps</string>
    <!-- Default folder name -->
    <string name="folder_name">Folder</string>
    <!-- Title of dialog that appears after user selects Wallpaper from menu -->
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
    <string name="wallpaper_instructions">Set wallpaper</string>
    <!-- Option in "Select wallpaper from" dialog box -->
    <string name="pick_wallpaper">Wallpapers</string>
    <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <!-- List item for configuring the current wallpaper -->
    <string name="configure_wallpaper">Configure...</string>

    <!-- Folders -->
    <skip />
    <!-- Label of Folder name field in Rename folder dialog box -->
    <string name="rename_folder_label">Folder name</string>
    <!-- Title of dialog box -->
    <string name="rename_folder_title">Rename folder</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="cancel_action">Cancel</string>

    <!-- Shortcuts -->
    <skip />
    <!-- Title of dialog box -->
    <string name="menu_item_add_item">Add to Home screen</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
    <string name="group_applications">Applications</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
    <string name="group_shortcuts">Shortcuts</string>
    <!-- Options in "Add to Home" dialog box; Title of the search gadget -->
    <string name="group_search">Search</string>
    <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
    <string name="group_folder">New folder</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
    <string name="group_live_folders">Folders</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
    <string name="group_widgets">Widgets</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of apps that can set the wallpaper-->
    <string name="group_wallpapers">Wallpapers</string>
    <!-- Options in "Add to Home" dialog box; Name of the Folder widget-->
    <string name="add_folder">Folder</string>
    <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
    <string name="add_clock">Clock</string>
    <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
    <string name="add_photo_frame">Picture frame</string>
    <!-- Options in "Add to Home" dialog box; Name of the global search widget-->
    <string name="add_search">Search</string>
    <!-- Error message when user has filled a home screen, possibly not used -->
    <string name="out_of_space">No more room on this Home screen.</string>
    <!-- Message displayed when a shortcut is created by an external application -->
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <!-- Message displayed when a shortcut is uninstalled by an external application -->
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>

    <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
    <string name="title_select_shortcut">Select shortcut</string>
    <!-- Title of dialog when user is selecting live folder to add to homescreen -->
    <string name="title_select_live_folder">Select folder</string>

    <!-- All applications label for accessibilty (spoken when the button gets focus). -->
    <string name="all_apps_button_label">All applications</string>
    <!-- Label for button in all applications label to go back home (to the workspace / desktop)
         for accessibilty (spoken when the button gets focus). -->
    <string name="all_apps_home_button_label">Home</string>

    <!-- Menus items: -->
    <skip />
    <!-- Verb, menu item used to add an item on the desktop -->
    <string name="menu_add">Add</string>
    <!-- Noun, menu item used to set the desktop's wallpaper -->
    <string name="menu_wallpaper">Wallpaper</string>
    <!-- Verb, menu item used to initiate global search -->
    <string name="menu_search">Search</string>
    <!-- Noun, menu item used to bring down the notifications shade -->
    <string name="menu_notifications">Notifications</string>
    <!-- Noun, menu item used to show the gestures settings -->
    <string name="menu_gestures">Gestures</string>
    <!-- Noun, menu item used to show the system settings -->
    <string name="menu_settings">Settings</string>
	<!-- Faruq: MOD Settings Menu -->
	<string name="menu_mod_settings">Configure</string>

    <!-- Permissions: -->
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>

    <!-- Widgets: -->
    <skip />    

    <!-- TODO: Determine if this can be removed.
         This is the hint text shown in the search widget, before text is entered.
         This translation SHOULD MATCH the string "search_hint" which is found in 
         GoogleSearch/res/values/strings.xml -->
    <string name="search_hint">Google Search</string>

    <!-- Text to show user in place of a gadget when we can't display it properly -->
    <string name="gadget_error_text">Problem loading widget</string>

	<!-- Launcher2 Preferences: -->
	<skip />
	<!-- Launcher2 Preferences Categories: -->
	<string name="pref_behavior_settings">Behaviors</string>
	<string name="pref_screen_settings">Screens</string>
	<string name="pref_icon_settings">Icons (Require Restart)</string>
	<string name="pref_app_settings">Shortcuts (Advanced ONLY)</string>

	<string name="pref_about">Launcher2 Mod About</string>
	
	<!-- Launcher2 Preferences Items: -->
	<string name="pref_title_launcher2_screen_size">Screen Size</string>
	<string name="pref_summary_launcher2_screen_size">(REQUIRE RESTART) Screen Size: <xliff:g id="count">%1$s</xliff:g></string>
	<string name="pref_summary_launcher2_set_screen_size">Set screen size</string>
	<string name="pref_title_quick_shortcuts">Quick Shortcuts</string>
	<string name="pref_summary_quick_shortcuts">Enable/Disable quick shortcuts; when disabled, dots will be shown instead</string>
	<string name="pref_title_launcher_default_screen">Default Screen</string>
	<string name="pref_summary_launcher_default_screen">(REQUIRE RESTART) Default Screen: <xliff:g id="count">%1$s</xliff:g></string>
	<string name="pref_summary_launcher_set_default_screen">Set default screen </string>
	<string name="pref_title_fullscreen">Fullscreen</string>
	<string name="pref_summary_fullscreen">Hide notification bar</string>
	<string name="pref_title_hide_labels">Hide Icon Titles</string>
	<string name="pref_summary_hide_labels">Enable/Disable hiding of desktop icons titles</string>
	<string name="pref_title_show_shortcuts_label">Show Shortcuts Titles</string>
	<string name="pref_summary_show_shortcuts_label">Enable/Disable showing of shortcuts titles while only hiding App Icons titles</string>
	<string name="pref_title_longpress_add">Long-Press on Screen</string>
	<string name="pref_summary_longpress_add">Enable/Disable long-press behavior to add items to screen</string>
	<string name="pref_title_double_tap">Double-Tap on Screen</string>
	<string name="pref_summary_double_tap">Enable/Disable double-tap to show previews</string>
	<string name="pref_title_auto_orientation">Auto-Rotate Screen</string>
	<string name="pref_summary_auto_orientation">Enable/Disable screen auto orientation</string>
	
	<string name="pref_summary_app_settings">Hint: You can also drag &amp; drop apps to the bottom bar to add the shortcut</string>
	<string name="pref_title_app_settings_2">Remove Shortcuts</string>
	<string name="pref_summary_app_settings_2">Hint: To remove the shortcut, long click on it</string>
	<string name="pref_title_app_package">Application Package</string>
	<string name="pref_summary_app_package">The full package name</string>
	<string name="pref_title_app_class">Application Class</string>
	<string name="pref_summary_app_class">The class name to be called by intent</string>
	<string name="pref_title_app_uri">Application URI</string>
	<string name="pref_summary_app_uri">Overrides calling intent by class</string>
	
	<string name="pref_title_launcher2_version">Version</string>
	<string name="pref_summary_launcher2_version">0.1</string>
	<string name="pref_title_launcher2_author">Author</string>
	<string name="pref_summary_launcher2_author">Faruq (twitter.com/ruqqq)</string>
	<string name="pref_title_launcher2_MODauthor">Modified by</string>
	<string name="pref_summary_launcher2_MODauthor">ADCRom Team(www.alldroid.org)</string>
	<string name="pref_title_launcher2_restart">Restart Launcher2</string>

	<string name="restore_default">Restore Default</string>
	
	<!-- Text to be used for affirmative response button in dialog boxes -->
	<string name="yes">OK</string>
    <!-- Text to be used for negative response button in dialog boxes -->
    <string name="no">Cancel</string>
    <!-- Text to be used for affirmative response button in setting SMS limits dialog box -->
    <string name="set">Set</string>

</resources>
