<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_screen_settings">
  		<Preference android:key="pref_key_launcher2_screen_size"
	                    android:defaultValue="7"
	                    android:title="@string/pref_title_launcher2_screen_size"
	                    android:summary="@string/pref_summary_launcher2_screen_size" />
		<Preference android:key="pref_key_launcher_default_screen"
	                    android:defaultValue="2"
	                    android:title="@string/pref_title_launcher_default_screen"
	                    android:summary="@string/pref_summary_launcher_default_screen" />
	<CheckBoxPreference android:key="pref_key_launcher_fullscreen"
                            android:title="@string/pref_title_fullscreen"
                            android:summary="@string/pref_summary_fullscreen"
                            android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_icon_settings">
	<CheckBoxPreference android:key="pref_key_launcher_hide_labels"
                            android:title="@string/pref_title_hide_labels"
                            android:summary="@string/pref_summary_hide_labels"
                            android:defaultValue="false" />
	<CheckBoxPreference android:key="pref_key_launcher_show_shortcuts_label"
                            android:title="@string/pref_title_show_shortcuts_label"
	                    android:summary="@string/pref_summary_show_shortcuts_label"
	                    android:defaultValue="true" 
	                    android:dependency="pref_key_launcher_hide_labels"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_behavior_settings">
    	<CheckBoxPreference android:key="pref_key_launcher2_longpress_add"
                            android:title="@string/pref_title_longpress_add"
                            android:summary="@string/pref_summary_longpress_add"
                            android:defaultValue="true" />
	<CheckBoxPreference android:key="pref_key_launcher_double_tap"
                            android:title="@string/pref_title_double_tap"
                            android:summary="@string/pref_summary_double_tap"
                            android:defaultValue="true" />
	<CheckBoxPreference android:key="pref_key_launcher2_auto_orientation"
                            android:title="@string/pref_title_auto_orientation"
                            android:summary="@string/pref_summary_auto_orientation"
                            android:defaultValue="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_app_settings">
	<CheckBoxPreference android:key="pref_key_launcher2_quick_shortcuts"
	                    android:title="@string/pref_title_quick_shortcuts"
	                    android:summary="@string/pref_summary_quick_shortcuts"
	                    android:defaultValue="true" />
	  <PreferenceScreen android:key="pref_key_launcher2_app_settings"
	                    android:title="@string/pref_app_settings"
	  		    android:summary="@string/pref_summary_app_settings"
			    android:dependency="pref_key_launcher2_quick_shortcuts" > 		
	<EditTextPreference android:key="pref_key_launcher2_app1_package"
	                    android:title="@string/pref_title_app_package"
	                    android:summary="@string/pref_summary_app_package"
	                    android:defaultValue="com.android.contacts" />
	<EditTextPreference android:key="pref_key_launcher2_app1_class"
	                    android:title="@string/pref_title_app_class"
	                    android:summary="@string/pref_summary_app_class"
	                    android:defaultValue="com.android.contacts.DialtactsActivity" />
	<EditTextPreference android:key="pref_key_launcher2_app1_uri"
	                    android:title="@string/pref_title_app_uri"
	                    android:summary="@string/pref_summary_app_uri"
	                    android:defaultValue="" />
				
	<EditTextPreference android:key="pref_key_launcher2_app2_package"
	                    android:title="@string/pref_title_app_package"
	                    android:summary="@string/pref_summary_app_package"
	                    android:defaultValue="com.android.mms" />
	<EditTextPreference android:key="pref_key_launcher2_app2_class"
	                    android:title="@string/pref_title_app_class"
	                    android:summary="@string/pref_summary_app_class"
	                    android:defaultValue="com.android.mms.ui.ConversationList" />
	<EditTextPreference android:key="pref_key_launcher2_app2_uri"
	                    android:title="@string/pref_title_app_uri"
	                    android:summary="@string/pref_summary_app_uri"
	                    android:defaultValue="" />
		
	<EditTextPreference android:key="pref_key_launcher2_app3_package"
	                    android:title="@string/pref_title_app_package"
	                    android:summary="@string/pref_summary_app_package"
	                    android:defaultValue="com.android.browser" />
	<EditTextPreference android:key="pref_key_launcher2_app3_class"
	                    android:title="@string/pref_title_app_class"
	                    android:summary="@string/pref_summary_app_class"
	                    android:defaultValue="com.android.browser.BrowserActivity" />
	<EditTextPreference android:key="pref_key_launcher2_app3_uri"
	                    android:title="@string/pref_title_app_uri"
	                    android:summary="@string/pref_summary_app_uri"
	                    android:defaultValue="" />
		
	<EditTextPreference android:key="pref_key_launcher2_app4_package"
	                    android:title="@string/pref_title_app_package"
	                    android:summary="@string/pref_summary_app_package"
	                    android:defaultValue="com.android.vending" />
	<EditTextPreference android:key="pref_key_launcher2_app4_class"
	                    android:title="@string/pref_title_app_class"
	                    android:summary="@string/pref_summary_app_class"
	                    android:defaultValue="com.android.vending.AssetBrowserActivity" />
	<EditTextPreference android:key="pref_key_launcher2_app4_uri"
	                    android:title="@string/pref_title_app_uri"
	                    android:summary="@string/pref_summary_app_uri"
	                    android:defaultValue="" />
	</PreferenceScreen>
	 <Preference	
			    android:title="@string/pref_title_app_settings_2" 
			    android:summary="@string/pref_summary_app_settings_2" 
		  	    android:enabled="false" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_about">
    		<Preference android:key="pref_key_launcher2_version"
	                    android:persistent="false"
	                    android:summary="@string/pref_summary_launcher2_author"
	                    android:title="@string/pref_title_launcher2_author" />
		<Preference android:key="pref_key_launcher2_version"
	                    android:persistent="false"
	                    android:summary="@string/pref_summary_launcher2_MODauthor"
	                    android:title="@string/pref_title_launcher2_MODauthor" />
		<Preference android:key="pref_key_launcher2_version"
	                    android:persistent="false"
	                    android:summary="@string/pref_summary_launcher2_version"
	                    android:title="@string/pref_title_launcher2_version" />
		<Preference android:key="pref_key_launcher2_restart"
	                    android:persistent="false"
	                    android:title="@string/pref_title_launcher2_restart" />
	</PreferenceCategory>
</PreferenceScreen>
